Add create and update for SMTPProvider entity.

--- a/template/core-dist/src/app/pages/access-keys-page/access-keys.component.html
+++ b/template/core-dist/src/app/pages/access-keys-page/access-keys.component.html
@@ -20,7 +20,7 @@
     <td>{{accessKey.secretKey}}</td>
     <td>
       <md-icon class="entity-index__table__body__action" (click)="viewEntity(accessKey.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="editEntity(accessKey)">mode_edit</md-icon>
+      <md-icon class="entity-index__table__body__action" (click)="updateEntity(accessKey.id)">mode_edit</md-icon>
       <md-icon class="entity-index__table__body__action" (click)="deleteEntity(accessKey.id)">delete</md-icon>
     </td>
   </tr>
