--- a/template/core-dist/src/app/pages/affiliates-page/affiliates.component.html
+++ b/template/core-dist/src/app/pages/affiliates-page/affiliates.component.html
@@ -30,7 +30,7 @@
     <td>{{affiliate.clickId}}</td>
     <td>
       <md-icon class="entity-index__table__body__action" (click)="viewEntity(affiliate.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="editEntity(affiliate)">mode_edit</md-icon>
+      <md-icon class="entity-index__table__body__action" (click)="updateEntity(affiliate.id)">mode_edit</md-icon>
       <md-icon class="entity-index__table__body__action" (click)="deleteEntity(affiliate.id)">delete</md-icon>
     </td>
   </tr>
