--- a/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
+++ b/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
@@ -22,7 +22,7 @@
     <td>{{campaign.productSchedules.length}}</td>
     <td>
       <md-icon class="entity-index__table__body__action" (click)="viewEntity(campaign.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="editEntity(campaign)">mode_edit</md-icon>
+      <md-icon class="entity-index__table__body__action" (click)="updateEntity(campaign.id)">mode_edit</md-icon>
       <md-icon class="entity-index__table__body__action" (click)="deleteEntity(campaign.id)">delete</md-icon>
     </td>
   </tr>
