--- a/template/core-dist/src/app/pages/credit-cards-page/credit-cards.component.html
+++ b/template/core-dist/src/app/pages/credit-cards-page/credit-cards.component.html
@@ -26,7 +26,7 @@
     <td>{{creditCard.address.city}}</td>
     <td>
       <md-icon class="entity-index__table__body__action" (click)="viewEntity(creditCard.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="editEntity(creditCard)">mode_edit</md-icon>
+      <md-icon class="entity-index__table__body__action" (click)="updateEntity(creditCard.id)">mode_edit</md-icon>
       <md-icon class="entity-index__table__body__action" (click)="deleteEntity(creditCard.id)">delete</md-icon>
     </td>
   </tr>
