--- a/template/core-dist/src/app/pages/emails-page/emails.component.html
+++ b/template/core-dist/src/app/pages/emails-page/emails.component.html
@@ -24,7 +24,7 @@
     <td>{{email.smtpProvider.name}}</td>
     <td>
       <md-icon class="entity-index__table__body__action" (click)="viewEntity(email.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="editEntity(email)">mode_edit</md-icon>
+      <md-icon class="entity-index__table__body__action" (click)="updateEntity(email.id)">mode_edit</md-icon>
       <md-icon class="entity-index__table__body__action" (click)="deleteEntity(email.id)">delete</md-icon>
     </td>
   </tr>
