--- a/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-providers.component.html
+++ b/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-providers.component.html
@@ -26,7 +26,7 @@
     <td>{{fulfillmentProvider.provider}}</td>
     <td>
       <md-icon class="entity-index__table__body__action" (click)="viewEntity(fulfillmentProvider.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="editEntity(fulfillmentProvider)">mode_edit</md-icon>
+      <md-icon class="entity-index__table__body__action" (click)="updateEntity(fulfillmentProvider.id)">mode_edit</md-icon>
       <md-icon class="entity-index__table__body__action" (click)="deleteEntity(fulfillmentProvider.id)">delete</md-icon>
     </td>
   </tr>
