--- a/template/core-dist/src/app/pages/load-balancers-page/load-balancers.component.html
+++ b/template/core-dist/src/app/pages/load-balancers-page/load-balancers.component.html
@@ -20,7 +20,7 @@
     <td>{{loadBalancer.merchantProviderConfigurations.length}}</td>
     <td>
       <md-icon class="entity-index__table__body__action" (click)="viewEntity(loadBalancer.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="editEntity(loadBalancer)">mode_edit</md-icon>
+      <md-icon class="entity-index__table__body__action" (click)="updateEntity(loadBalancer.id)">mode_edit</md-icon>
       <md-icon class="entity-index__table__body__action" (click)="deleteEntity(loadBalancer.id)">delete</md-icon>
     </td>
   </tr>
