--- a/template/core-dist/src/app/pages/merchant-providers-page/merchant-providers.component.html
+++ b/template/core-dist/src/app/pages/merchant-providers-page/merchant-providers.component.html
@@ -26,7 +26,7 @@
     <td>{{merchantProvider.processor}}</td>
     <td>
       <md-icon class="entity-index__table__body__action" (click)="viewEntity(merchantProvider.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="editEntity(merchantProvider)">mode_edit</md-icon>
+      <md-icon class="entity-index__table__body__action" (click)="updateEntity(merchantProvider.id)">mode_edit</md-icon>
       <md-icon class="entity-index__table__body__action" (click)="deleteEntity(merchantProvider.id)">delete</md-icon>
     </td>
   </tr>
