--- a/template/core-dist/src/app/pages/products-page/products.component.html
+++ b/template/core-dist/src/app/pages/products-page/products.component.html
@@ -24,7 +24,7 @@
     <td>{{product.shippingDelay}}</td>
     <td>
       <md-icon class="entity-index__table__body__action" (click)="viewEntity(product.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="editEntity(product)">mode_edit</md-icon>
+      <md-icon class="entity-index__table__body__action" (click)="updateEntity(product.id)">mode_edit</md-icon>
       <md-icon class="entity-index__table__body__action" (click)="deleteEntity(product.id)">delete</md-icon>
     </td>
   </tr>
