--- a/template/core-dist/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
+++ b/template/core-dist/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
@@ -1,11 +1,15 @@
 <md-card *ngIf="smtpProvider">
-  <md-card-title>User View</md-card-title>
+  <md-card-title>SMTP Provider {{mode}}</md-card-title>
   <md-card-content>
-    <md-input disabled placeholder="Name" value="{{smtpProvider.name}}"></md-input>
-    <md-input disabled placeholder="Hostname" value="{{smtpProvider.hostname}}"></md-input>
-    <md-input disabled placeholder="IP Address" value="{{smtpProvider.ipAddress}}"></md-input>
-    <md-input disabled placeholder="Username" value="{{smtpProvider.username}}"></md-input>
-    <md-input disabled placeholder="Password" value="{{smtpProvider.password}}"></md-input>
-    <md-input disabled placeholder="Port" value="{{smtpProvider.port}}"></md-input>
+    <md-input *ngIf="addMode" placeholder="ID" [(ngModel)]="smtpProvider.id" name="id"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Name" [(ngModel)]="smtpProvider.name" name="name"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Hostname" [(ngModel)]="smtpProvider.hostname" name="hostname"></md-input>
+    <md-input [disabled]="viewMode" placeholder="IP Address" [(ngModel)]="smtpProvider.ipAddress" name="ipAddress"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Username" [(ngModel)]="smtpProvider.username" name="username"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Password" [(ngModel)]="smtpProvider.password" name="password"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Port" [(ngModel)]="smtpProvider.port" name="port"></md-input>
   </md-card-content>
+  <button md-raised-button color="primary" *ngIf="addMode" (click)="saveEntity(smtpProvider)"> Save </button>
+  <button md-raised-button color="primary" *ngIf="updateMode" (click)="updateEntity(smtpProvider)"> Update </button>
+  <button md-raised-button color="primary" *ngIf="updateMode" (click)="cancelUpdate()"> Cancel </button>
 </md-card>
