--- a/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
+++ b/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
@@ -1,4 +1,4 @@
-<button md-fab class="entity-index__button--add"> <md-icon>add</md-icon></button>
+<button md-fab class="entity-index__button--add" (click)="add()"> <md-icon>add</md-icon></button>
 
 <div class="entity-index__search">
   <md-input placeholder="search"></md-input>
@@ -26,7 +26,7 @@
     <td>{{smtpProvider.port}}</td>
     <td>
       <md-icon class="entity-index__table__body__action" (click)="viewEntity(smtpProvider.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="editEntity(smtpProvider)">mode_edit</md-icon>
+      <md-icon class="entity-index__table__body__action" (click)="updateEntity(smtpProvider.id)">mode_edit</md-icon>
       <md-icon class="entity-index__table__body__action" (click)="deleteEntity(smtpProvider.id)">delete</md-icon>
     </td>
   </tr>
