--- a/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
+++ b/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
@@ -1,4 +1,4 @@
-<button md-fab class="entity-index__button--add" (click)="add()"> <md-icon>add</md-icon></button>
+<button md-fab class="entity-index__button--add" (click)="addEntity()"> <md-icon>add</md-icon></button>
 
 <div class="entity-index__search">
   <md-input placeholder="search"></md-input>
