--- a/template/core-dist/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-view.component.html
+++ b/template/core-dist/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-view.component.html
@@ -1,16 +1,31 @@
 <md-card *ngIf="loadBalancer">
-  <md-card-title>Load Balancer</md-card-title>
+  <md-card-title>Load Balancer {{mode}}</md-card-title>
   <md-card-content>
-    <md-card-subtitle>Load Balancer</md-card-subtitle>
-    <md-input disabled placeholder="ID" value="{{loadBalancer.id}}"></md-input>
+    <md-input [disabled]="!addMode" placeholder="ID" [(ngModel)]="loadBalancer.id" name="id"></md-input>
 
     <div class="content__block__first">
-      <md-card-subtitle>Merchant Provider Configurations</md-card-subtitle>
-      <ng-container *ngFor="let merchantProviderConfig of loadBalancer.merchantProviderConfigurations">
-        <div class="content__block__second">
-          <md-card-subtitle>Merchant Provider Configuration</md-card-subtitle>
-          <md-input disabled placeholder="distribution" value="{{merchantProviderConfig.distribution}}"></md-input>
+      <md-card-subtitle>
+        Merchant Provider Configurations
+        <button *ngIf="!viewMode" md-icon-button [md-menu-trigger-for]="providersMenu">
+          <md-icon>add</md-icon>
+        </button>
+      </md-card-subtitle>
 
+      <md-menu #providersMenu="mdMenu">
+        <button md-menu-item *ngFor="let provider of merchantProviders" (click)="addNewConfiguration(provider)">
+          {{provider.username}}
+        </button>
+      </md-menu>
+
+      <ng-container *ngFor="let merchantProviderConfig of loadBalancer.merchantProviderConfigurations; let i = index">
+        <div class="content__block__second">
+          <md-card-subtitle>Merchant Provider Configuration
+            <button *ngIf="!viewMode" md-icon-button (click)="removeConfiguration(i)">
+              <md-icon>remove</md-icon>
+            </button>
+          </md-card-subtitle>
+
+          <md-input [disabled]="viewMode" placeholder="distribution" [(ngModel)]="merchantProviderConfig.distribution"></md-input>
           <div class="content__block__fourth">
             <md-card-subtitle class="content__subtitle__fourth">Merchant Provider</md-card-subtitle>
             <md-input disabled placeholder="username" value="{{merchantProviderConfig.merchantProvider.username}}"></md-input>
@@ -22,4 +37,7 @@
       </ng-container>
     </div>
   </md-card-content>
+  <button md-raised-button color="primary" *ngIf="addMode" (click)="saveEntity(loadBalancer)"> Save </button>
+  <button md-raised-button color="primary" *ngIf="updateMode" (click)="updateEntity(loadBalancer)"> Update </button>
+  <button md-raised-button color="primary" *ngIf="updateMode" (click)="cancelUpdate()"> Cancel </button>
 </md-card>
