--- a/template/core-dist/src/assets/scss/_materialize-css.scss
+++ b/template/core-dist/src/assets/scss/_materialize-css.scss
@@ -14,7 +14,7 @@
 ////@import "../../../node_modules/materialize-css/sass/components/icons-material-design";
 //@import "../../../node_modules/materialize-css/sass/components/grid";
 //@import "../../../node_modules/materialize-css/sass/components/navbar";
-//@import "../../../node_modules/materialize-css/sass/components/roboto";
+@import "../../../node_modules/materialize-css/sass/components/roboto";
 //@import "../../../node_modules/materialize-css/sass/components/typography";
 ////@import "../../../node_modules/materialize-css/sass/components/cards";
 //@import "../../../node_modules/materialize-css/sass/components/toast";
