--- a/template/core-dist/src/app/navigation/topnav/topnav.component.scss
+++ b/template/core-dist/src/app/navigation/topnav/topnav.component.scss
@@ -1,12 +1,11 @@
+@import "../../../assets/scss/mixins";
 :host {
   display: block;
 }
 
 .topnav__dropdown {
-  &__image {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
+  &__trigger {
+    @include font-subheader();
 
     &:hover {
       cursor: pointer;
@@ -15,10 +14,39 @@
 
   &__menu {
     position: absolute;
-    top: 60px;
-    right: 15px;
+    top: 63px;
+    right: 0;
     z-index: 1000;
     background-color: white;
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+    text-align: right;
+
+    &__profile {
+      display: inline-block;
+
+      &__image {
+        display: inline-block;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        vertical-align: middle;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      span {
+        margin-left: 10px !important;
+      }
+    }
+
+    button {
+      @include font-menu();
+    }
+
+    span {
+      margin-left: 55px;
+    }
   }
 }
