--- a/template/core-dist/src/styles.scss
+++ b/template/core-dist/src/styles.scss
@@ -1,6 +1,6 @@
 @import "assets/scss/_variables.scss";
 @import "assets/scss/_colors.scss";
-//@import "assets/scss/_materialize-css.scss";
+@import "assets/scss/_materialize-css.scss";
 @import "assets/scss/_flex.scss";
 @import "assets/scss/_navigation.scss";
 @import "assets/scss/_typography.scss";
@@ -8,13 +8,17 @@
 @import "assets/scss/_tables.scss";
 @import "assets/scss/_forms.scss";
 @import "assets/scss/_entity-index.scss";
+@import "assets/scss/_mixins.scss";
 
 /***************
   HTML Styles
 ***************/
 
 body {
+  @include font-body();
+
   margin: 0;
+  font-family: "Roboto";
 }
 main > .container {
   margin: 20px auto;
