Add a loader bar when asynchronous requests are executing.

--- a/template/core-dist/src/app/navigation/layouts/default/default.layout.component.html
+++ b/template/core-dist/src/app/navigation/layouts/default/default.layout.component.html
@@ -5,6 +5,7 @@
   <header>
     <app-topnav [sideNav]="sidenav"></app-topnav>
   </header>
+  <md-progress-bar *ngIf="showTopProgress" mode="query"></md-progress-bar>
 
   <main>
     <div class="container">
