--- a/template/core-dist/src/app/pages/products-page/products.component.html
+++ b/template/core-dist/src/app/pages/products-page/products.component.html
@@ -1,33 +1,38 @@
-<button md-fab class="entity-index__button--add"> <md-icon>add</md-icon></button>
+<md-card>
+  <md-card-title> <span>Product Index</span> </md-card-title>
+  <md-card-content>
+    <button md-raised-button color="primary" (click)="addEntity()">New Product</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="Name">Product Name</th>
-    <th data-field="Sku">SKU</th>
-    <th data-field="Ship">Ship</th>
-    <th data-field="Shipping Delay">Shipping Delay</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="highlight">
+      <thead class="entity-index__table__header">
+      <tr>
+        <th data-field="Name">Product Name <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="Sku">SKU <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="Ship">Ship <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="Shipping Delay">Shipping Delay <md-icon>keyboard_arrow_down</md-icon></th>
+        <th>Actions</th>
+      </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let product of products">
-    <td>{{product.name}}</td>
-    <td>{{product.sku}}</td>
-    <td>{{product.ship}}</td>
-    <td>{{product.shippingDelay}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(product.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(product.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(product.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
+      <tbody>
+      <tr *ngFor="let product of products">
+        <td>{{product.name}}</td>
+        <td>{{product.sku}}</td>
+        <td>{{product.ship}}</td>
+        <td>{{product.shippingDelay}}</td>
+        <td>
+          <md-icon class="entity-index__table__body__action" (click)="viewEntity(product.id)">visibility</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="updateEntity(product.id)">mode_edit</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(product.id)">delete</md-icon>
+        </td>
+      </tr>
+      </tbody>
 
-</table>
+    </table>
+  </md-card-content>
+</md-card>
