--- a/template/core-dist/src/app/pages/products-page/product-view/product-view.component.html
+++ b/template/core-dist/src/app/pages/products-page/product-view/product-view.component.html
@@ -1,14 +1,14 @@
-<md-card *ngIf="product">
+<md-card *ngIf="entity">
   <md-card-title> <span>{{mode}} Product</span> </md-card-title>
   <md-card-content>
-    <md-input [disabled]="viewMode" placeholder="Name" [(ngModel)]="product.name"></md-input>
-    <md-input [disabled]="viewMode" placeholder="SKU" [(ngModel)]="product.sku"></md-input>
-    <span [class.input-active]="product.ship" style="width: 100px" *ngIf="!viewMode">
-      {{ product.ship || 'Ship'}}
+    <md-input [disabled]="viewMode" placeholder="Name" [(ngModel)]="entity.name"></md-input>
+    <md-input [disabled]="viewMode" placeholder="SKU" [(ngModel)]="entity.sku"></md-input>
+    <span [class.input-active]="entity.ship" style="width: 100px" *ngIf="!viewMode">
+      {{ entity.ship || 'Ship'}}
       <md-icon *ngIf="!viewMode" [md-menu-trigger-for]="shipMenu">keyboard_arrow_down</md-icon>
     </span>
-    <md-input style="width: 100px" *ngIf="viewMode" [disabled]="viewMode" placeholder="Ship" [(ngModel)]="product.ship"></md-input>
-    <md-input [disabled]="viewMode" placeholder="Shipping Delay" [(ngModel)]="product.shippingDelay"></md-input>
+    <md-input style="width: 100px" *ngIf="viewMode" [disabled]="viewMode" placeholder="Ship" [(ngModel)]="entity.ship"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Shipping Delay" [(ngModel)]="entity.shippingDelay"></md-input>
 
     <md-menu #shipMenu="mdMenu" x-position="before">
       <button md-menu-item (click)="setShip('True')"> True </button>
@@ -17,11 +17,11 @@
 
     <div>
       <md-card-subtitle>Fulfillment Provider</md-card-subtitle>
-      <span *ngIf="!viewMode" [class.input-active]="product.fulfillmentProvider.name" style="width: 220px">
-        {{ product.fulfillmentProvider.name || 'Select'}}
+      <span *ngIf="!viewMode" [class.input-active]="entity.fulfillmentProvider.name" style="width: 220px">
+        {{ entity.fulfillmentProvider.name || 'Select'}}
         <md-icon *ngIf="!viewMode" [md-menu-trigger-for]="fulfillmentMenu">keyboard_arrow_down</md-icon>
       </span>
-      <md-input *ngIf="viewMode" disabled value="{{product.fulfillmentProvider.name}}" style="width: 220px"></md-input>
+      <md-input *ngIf="viewMode" disabled value="{{entity.fulfillmentProvider.name}}" style="width: 220px"></md-input>
     </div>
 
     <md-menu #fulfillmentMenu="mdMenu" x-position="before">
@@ -31,8 +31,8 @@
     </md-menu>
   </md-card-content>
   <md-card-actions align="end">
-    <button md-raised-button color="primary" *ngIf="addMode">Save</button>
-    <button md-raised-button color="primary" *ngIf="updateMode">Save</button>
+    <button md-raised-button color="primary" *ngIf="addMode" (click)="saveEntity(entity)">Save</button>
+    <button md-raised-button color="primary" *ngIf="updateMode" (click)="updateEntity(entity)">Save</button>
     <button md-raised-button color="primary" *ngIf="updateMode" (click)="cancelUpdate()">Cancel</button>
   </md-card-actions>
 </md-card>
