--- a/template/core-dist/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
+++ b/template/core-dist/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
@@ -1,15 +1,15 @@
-<md-card *ngIf="smtpProvider">
+<md-card *ngIf="entity">
   <md-card-title>SMTP Provider {{mode}}</md-card-title>
   <md-card-content>
-    <md-input *ngIf="addMode" placeholder="ID" [(ngModel)]="smtpProvider.id" name="id"></md-input>
-    <md-input [disabled]="viewMode" placeholder="Name" [(ngModel)]="smtpProvider.name" name="name"></md-input>
-    <md-input [disabled]="viewMode" placeholder="Hostname" [(ngModel)]="smtpProvider.hostname" name="hostname"></md-input>
-    <md-input [disabled]="viewMode" placeholder="IP Address" [(ngModel)]="smtpProvider.ipAddress" name="ipAddress"></md-input>
-    <md-input [disabled]="viewMode" placeholder="Username" [(ngModel)]="smtpProvider.username" name="username"></md-input>
-    <md-input [disabled]="viewMode" placeholder="Password" [(ngModel)]="smtpProvider.password" name="password"></md-input>
-    <md-input [disabled]="viewMode" placeholder="Port" [(ngModel)]="smtpProvider.port" name="port"></md-input>
+    <md-input *ngIf="addMode" placeholder="ID" [(ngModel)]="entity.id" name="id"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Name" [(ngModel)]="entity.name" name="name"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Hostname" [(ngModel)]="entity.hostname" name="hostname"></md-input>
+    <md-input [disabled]="viewMode" placeholder="IP Address" [(ngModel)]="entity.ipAddress" name="ipAddress"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Username" [(ngModel)]="entity.username" name="username"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Password" [(ngModel)]="entity.password" name="password"></md-input>
+    <md-input [disabled]="viewMode" placeholder="Port" [(ngModel)]="entity.port" name="port"></md-input>
   </md-card-content>
-  <button md-raised-button color="primary" *ngIf="addMode" (click)="saveEntity(smtpProvider)"> Save </button>
-  <button md-raised-button color="primary" *ngIf="updateMode" (click)="updateEntity(smtpProvider)"> Update </button>
+  <button md-raised-button color="primary" *ngIf="addMode" (click)="saveEntity(entity)"> Save </button>
+  <button md-raised-button color="primary" *ngIf="updateMode" (click)="updateEntity(entity)"> Update </button>
   <button md-raised-button color="primary" *ngIf="updateMode" (click)="cancelUpdate()"> Cancel </button>
 </md-card>
