--- a/template/core-dist/src/app/pages/product-schedule-page/product-schedule.component.html
+++ b/template/core-dist/src/app/pages/product-schedule-page/product-schedule.component.html
@@ -1,29 +1,33 @@
-<button md-fab class="entity-index__button--add" (click)="addEntity()"> <md-icon>add</md-icon></button>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Product Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
+    <button md-raised-button color="primary" (click)="addEntity()">New Product Schedule</button>
 
-<div class="entity-index__search">
-  <md-input placeholder="search"></md-input>
-  <button md-raised-button color="primary">search</button>
-</div>
+    <div class="entity-index__search">
+      <md-input placeholder="search"></md-input>
+      <button md-raised-button color="primary">search</button>
+    </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="id">ID</th>
-    <th data-field="numOfSchedules">Number Of Project Schedules</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
+    <table class="entity-index__table highlight">
+      <thead class="entity-index__table__header">
+      <tr>
+        <th data-field="id">ID <md-icon>keyboard_arrow_down</md-icon></th>
+        <th data-field="numOfSchedules">Number Of Project Schedules <md-icon>keyboard_arrow_down</md-icon></th>
+        <th>Actions</th>
+      </tr>
+      </thead>
 
-  <tbody>
-  <tr *ngFor="let productSchedule of productSchedules">
-    <td>{{productSchedule.id}}</td>
-    <td>{{productSchedule.schedules.length}}</td>
-    <td>
-      <md-icon class="entity-index__table__body__action" (click)="viewEntity(productSchedule.id)">visibility</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="updateEntity(productSchedule.id)">mode_edit</md-icon>
-      <md-icon class="entity-index__table__body__action" (click)="deleteEntity(productSchedule.id)">delete</md-icon>
-    </td>
-  </tr>
-  </tbody>
-
-</table>
+      <tbody>
+      <tr *ngFor="let productSchedule of productSchedules">
+        <td>{{productSchedule.id}}</td>
+        <td>{{productSchedule.schedules.length}}</td>
+        <td>
+          <md-icon class="entity-index__table__body__action" (click)="viewEntity(productSchedule.id)">visibility</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="updateEntity(productSchedule.id)">mode_edit</md-icon>
+          <md-icon class="entity-index__table__body__action" (click)="deleteEntity(productSchedule.id)">delete</md-icon>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+  </md-card-content>
+</md-card>
