--- a/template/core-dist/src/app/pages/products-page/product-view/product-view.component.scss
+++ b/template/core-dist/src/app/pages/products-page/product-view/product-view.component.scss
@@ -1,51 +1,11 @@
-md-card {
-  md-card-title {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background-color: #1976D2;
-    color: white;
+.input--active {
+  color: black;
+}
 
-    span {
-      margin-left: 24px;
-      line-height: 60px;
-    }
-  }
+.input--small {
+  width: 100px !important;
+}
 
-  md-card-content {
-    margin-top: 60px;
-
-    md-card-subtitle {
-      margin-top: 40px;
-    }
-
-    md-input {
-      margin-right: 20px;
-      margin-left: 0;
-    }
-
-    span {
-      position: relative;
-      display: inline-block;
-      margin-right: 20px;
-      padding-bottom: 4px;
-      border-bottom: 1px #9E9E9E solid;
-      width: 100px;
-      color: #9E9E9E;
-
-      md-icon {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        color: black;
-        cursor: pointer;
-      }
-    }
-
-    .input-active {
-      color: black;
-    }
-  }
+.input--medium {
+  width: 220px !important;
 }
