--- a/template/core-dist/src/app/pages/products-page/products.component.html
+++ b/template/core-dist/src/app/pages/products-page/products.component.html
@@ -1,6 +1,6 @@
-<md-card>
-  <md-card-title> <span>Product Index</span> </md-card-title>
-  <md-card-content>
+<md-card class="entity-index__card">
+  <md-card-title class="entity-index__card__title"> <span>Product Index</span> </md-card-title>
+  <md-card-content class="entity-index__card__content">
     <button md-raised-button color="primary" (click)="addEntity()">New Product</button>
 
     <div class="entity-index__search">
@@ -8,7 +8,7 @@
       <button md-raised-button color="primary">search</button>
     </div>
 
-    <table class="highlight">
+    <table class="entity-index__table highlight">
       <thead class="entity-index__table__header">
       <tr>
         <th data-field="Name">Product Name <md-icon>keyboard_arrow_down</md-icon></th>
