--- a/template/core-dist/src/assets/scss/_entity-index.scss
+++ b/template/core-dist/src/assets/scss/_entity-index.scss
@@ -1,8 +1,25 @@
 .entity-index {
 
-  &__button--add {
-    background-color: #1976d2;
-    color: white !important;
+  &__card {
+
+    &__title {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 60px;
+      background-color: #1976D2;
+      color: white;
+
+      span {
+        margin-left: 24px;
+        line-height: 60px;
+      }
+    }
+
+    &__content {
+      margin-top: 60px;
+    }
   }
 
   &__search {
@@ -14,8 +31,20 @@
   }
 
   &__table {
+
     &__header {
 
+      tr th {
+        position: relative;
+
+        md-icon {
+          position: absolute;
+          bottom: 15px;
+          cursor: pointer;
+          width: 20px;
+          height: 20px;
+        }
+      }
     }
 
     &__body {
