--- a/template/core-dist/src/styles.scss
+++ b/template/core-dist/src/styles.scss
@@ -8,6 +8,7 @@
 @import "assets/scss/_tables.scss";
 @import "assets/scss/_forms.scss";
 @import "assets/scss/_entity-index.scss";
+@import "assets/scss/_entity-view.scss";
 @import "assets/scss/_mixins.scss";
 
 /***************
