--- a/template/core-dist/src/app/authentication/registration/registration.component.html
+++ b/template/core-dist/src/app/authentication/registration/registration.component.html
@@ -2,7 +2,17 @@
   <div *ngIf="showWelcome" class="registration--in">
     <div class="registration--in__welcome">
       <h1> Thank You! </h1>
-      <img src="assets/favicons/favicon-icon.png">
+
+      <svg width="150px" height="150px" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52.97 52.88">
+        <defs>
+          <style>.cls-1{fill:#1976D2;}</style>
+        </defs>
+        <title>favicon</title>
+        <path class="cls-1"
+          d="M48.73,11.23A26.38,26.38,0,0,0,32.11,3.56l0,0L18.37,17.31A17.23,17.23,0,1,0,30,12.75c-0.38,0-.76,0-1.14,0L33.65,8a22.23,22.23,0,1,1-19.48,
+          6.31L24.37,4.08A26.48,26.48,0,1,0,48.73,11.23ZM30,17a13,13,0,1,1-9.23,3.86h0l0.53-.53A12.94,12.94,0,0,1,30,17Z" transform="translate(-3.52 -3.56)"/>
+      </svg>
+
       <h2>
         Welcome to SixCRM!
       </h2>
